--- a/app/views/admins/contacts/index.html.erb
+++ b/app/views/admins/contacts/index.html.erb
@@ -9,9 +9,9 @@
 
   <!--お問い合わせ一覧-->
   <div class="table-responsive">
-    <table class="table">
+    <table class="table table-light table-striped">
       <head>
-        <tr>
+        <tr class="table-dark text-dark">
           <th>お問い合わせ日時</th>
           <th>氏名</th>
           <th>回答ステータス</th>
