--- a/app/views/admins/game_results/index.html.erb
+++ b/app/views/admins/game_results/index.html.erb
@@ -1,6 +1,6 @@
-<section class="container col-md-5 mt-5">
+<section class="container mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">試合結果一覧</h2>
+  <h2 class="section-ttl row justify-content-center">試合結果一覧</h2>
 
   <!--メンバー追加画面へのリンク-->
   <div>
@@ -14,13 +14,12 @@
   
   <!--メンバー一覧-->
   <div class="table-responsive">
-    <table class="table">
+    <table class="table table-light table-striped">
       <head>
-        <tr>
+        <tr class="table-dark text-dark">
           <th>開催日</th>
           <th>大会名</th>
           <th>試合名</th>
-          <th></th>
           <th></th>
           <th></th>
         </tr>
