--- a/app/views/admins/graduates/index.html.erb
+++ b/app/views/admins/graduates/index.html.erb
@@ -14,9 +14,9 @@
 
   <!--OB一覧-->
   <div class="table-responsive">
-    <table class="table">
+    <table class="table table-light table-striped">
       <thead>
-        <tr>
+        <tr class="table-dark text-dark">
           <th>卒業年度</th>
           <th></th>
           <th></th>
