--- a/app/views/admins/guardians/index.html.erb
+++ b/app/views/admins/guardians/index.html.erb
@@ -9,9 +9,9 @@
 
   <!--保護者登録一覧-->
   <div class="table-responsive">
-    <table class="table">
+    <table class="table table-light table-striped">
       <thead>
-        <tr>
+        <tr class="table-dark text-dark">
           <th>更新日</th>
           <th>保護者氏名</th>
           <th>続柄</th>
