--- a/app/views/admins/informations/edit.html.erb
+++ b/app/views/admins/informations/edit.html.erb
@@ -35,6 +35,13 @@
           <%= f.text_area :content, class: "form-control", rows: "20" %>
         </div>
       </div>
+      <!--タグ付け-->
+      <div class="row">
+        <div class="form-group col-md-12">
+          <%= f.label :tag_list, "タグ付け", class: "form-label" %>
+          <%= f.text_field :tag_list, value: @information.tag_list.join(','), class: "form-control" %>
+        </div>
+      </div>
       <!--写真-->
       <div class="row">
         <div class="form-group col-md-12">
