--- a/app/views/admins/categories/index.html.erb
+++ b/app/views/admins/categories/index.html.erb
@@ -26,9 +26,9 @@
   </p>
   
   <!--カテゴリー一覧-->
-  <table class="table table-hover">
+  <table class="table table-hover table-light table-striped">
     <thead>
-      <tr>
+      <tr class="table-dark text-dark">
         <th>カテゴリーの名称</th>
         <th></th>
         <th></th>
