--- a/app/views/admins/information_for_guardians/index.html.erb
+++ b/app/views/admins/information_for_guardians/index.html.erb
@@ -7,11 +7,11 @@
     <%= link_to "お知らせ登録", new_admins_information_for_guardian_path, class: "btn btn-outline-secondary m-3" %>
   </div>
 
-  <!--お知らせ一覧-->
+  <!--保護者専用お知らせ一覧-->
   <div class="table-responsive">
-    <table class="table">
+    <table class="table table-light table-striped">
       <thead>
-        <tr>
+        <tr class="table-dark text-dark">
           <th>更新日</th>
           <th>タイトル</th>
           <th></th>
