--- a/app/views/admins/informations/show.html.erb
+++ b/app/views/admins/informations/show.html.erb
@@ -33,6 +33,10 @@
     			<td>内容</td>
     			<td><%= simple_format(@information.content) %></td>
         </tr>
+        <tr>
+    			<td>タグ</td>
+    			<td><%= @information.tag_list %></td>
+        </tr>
       </tbody>
     </table>
   </div>
