--- a/app/views/admins/members/edit.html.erb
+++ b/app/views/admins/members/edit.html.erb
@@ -1,4 +1,4 @@
-<section class="container col-md-5 mt-5">
+<section class="container w-80 mt-5">
   <!--セクションタイトル-->
   <h2 class="section-ttl row mb-3">メンバー情報を編集してください。</h2>
 
