--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -1,4 +1,4 @@
-<section class="container col-md-5 mt-5">
+<section class="container w-75 mt-5">
   <!--セクションタイトル-->
   <h2 class="section-ttl row mb-3">注文一覧</h2>
 
@@ -9,9 +9,9 @@
 
   <!--注文一覧-->
   <div class="table-responsive">
-    <table class="table">
+    <table class="table table-light table-striped">
       <thead>
-        <tr>
+        <tr class="table-dark text-dark">
           <th>注文日時</th>
           <th>注文ステータス</th>
           <th>注文者氏名</th>
