--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,24 +1,28 @@
-<div class="about-main container">
-    <!--学校説明-->
-    <h2>青山私立青山高等学校サッカー部</h2>
-    <img src="/assets/about/about.jpg" alt="青山高校サッカー部", class="img-fluid"></a>
+<div class="container mx-auto w-80">
+  
+  <!--学校説明見出し-->
+    <h3>青山私立青山高等学校サッカー部</h3>
+  <!--学校説明-->
+    <img src="/assets/about/about.jpg" alt="青山高校サッカー部" class="img-fluid"></a>
     <p>青山私立青山高等学校は、青山県青山町にある今年で創設90年を迎える伝統ある学校です。</p>
-    
-    <!--過去の功績リスト-->
-    <h2>過去の功績</h2>
+  
+  <!--過去の功績見出し-->
+    <h3>過去の功績</h3>
+  <!--過去の功績-->
     <img src="/assets/about/team.jpg" alt="青山高校サッカー部", class="img-fluid"></a>
     <ul class="list-unstyled">
         <li>全国高校サッカー選手権大会出場 3回</li>
         <li>第88回全国高校サッカー選手権大会XX県予選大会 第2位</li>
         <li>平2017年度XX高等学校サッカー新人大会 優勝</li>
     </ul>
-    
-    
-    <!--練習環境について説明-->
-    <h2>練習環境</h2>
+  
+  <!--練習環境について見出し-->
+    <h3>練習環境</h3>
+  <!--練習環境について説明-->
     <img src="/assets/about/ground.jpg" alt="青山高校サッカー部", class="img-fluid"></a>
     <p>キャンパス内に併設された人工芝のグランドを利用してます。<br>
     照明設備があり、昼間でも夜間でも練習や試合を行うことができます。<br>
     その他、ミーティングルームやトレーニングルームがあり、<br>
     素晴らしい環境で日々トレーニングに励んでいます。</p>
+
 </div>
