--- a/app/views/layouts/_tag_list.html.erb
+++ b/app/views/layouts/_tag_list.html.erb
@@ -1,3 +1,4 @@
+<!--タグの値を取得-->
 <% tag_list.each do |tag| %>
-  <span class="badge badge-primary mr-1 p-2"> tag </span>
+  <p class="badge badge-primary mr-1 p-2"><%= tag %></p>
 <% end %>
