--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,28 +1,46 @@
-<div class="container mx-auto w-80">
-  
+<div class="container p-5">
+
   <!--学校説明見出し-->
-    <h3>青山私立青山高等学校サッカー部</h3>
+  <h3 class="row section-ttl justify-content-center mb-5">
+    <span>青山高校サッカー部</span>
+  </h3>
   <!--学校説明-->
+  <div class="row justify-content-center mb-5">
     <img src="/assets/about/about.jpg" alt="青山高校サッカー部" class="img-fluid"></a>
-    <p>青山私立青山高等学校は、青山県青山町にある今年で創設90年を迎える伝統ある学校です。</p>
-  
+    <p>学校法人青山学園青山高等学校は、今年で創設90年を迎える伝統ある学校です。<br>
+    また、サッカー部は今年で創部50年を迎えることができました。<br>
+    全国大会出場を目標に、精一杯頑張っていきますので応援よろしくお願いいたします。<br>
+    </p>
+  </div>
+
   <!--過去の功績見出し-->
-    <h3>過去の功績</h3>
+  <h3 class="row section-ttl justify-content-center mb-5">
+    <span>過去の功績</span>
+  </h3>
   <!--過去の功績-->
+  <div class="row justify-content-center">
     <img src="/assets/about/team.jpg" alt="青山高校サッカー部", class="img-fluid"></a>
+  </div>
+  <div class="row justify-content-center mb-5">
     <ul class="list-unstyled">
-        <li>全国高校サッカー選手権大会出場 3回</li>
-        <li>第88回全国高校サッカー選手権大会XX県予選大会 第2位</li>
-        <li>平2017年度XX高等学校サッカー新人大会 優勝</li>
+      <li>平成32年度 第88回全国高校サッカー選手権大会県予選大会 第2位</li>
+      <li>平成31年度 第60回高等学校サッカー県新人大会 優勝</li>
+      <li>平成31年度 第60回高等学校サッカー県新人大会 優勝</li>
+      <li>平成29年度 全国高校サッカー選手権大会出場 3回</li>
     </ul>
-  
+  </div>
+
   <!--練習環境について見出し-->
-    <h3>練習環境</h3>
+  <h3 class="row section-ttl justify-content-center mb-5">
+    <span>練習環境</span>
+  </h3>
   <!--練習環境について説明-->
+  <div class="row justify-content-center mb-5">
     <img src="/assets/about/ground.jpg" alt="青山高校サッカー部", class="img-fluid"></a>
     <p>キャンパス内に併設された人工芝のグランドを利用してます。<br>
     照明設備があり、昼間でも夜間でも練習や試合を行うことができます。<br>
     その他、ミーティングルームやトレーニングルームがあり、<br>
     素晴らしい環境で日々トレーニングに励んでいます。</p>
+  </div>
 
 </div>
