--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,6 +1,8 @@
 <section class="member-content container mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">選手・スタッフ一覧</h2>
+  <h3 class="row section-ttl justify-content-center mb-5">
+    <span>選手・スタッフ一覧</span>
+  </h3>
 
   <!--メンバー追加画面へのリンク-->
   <div class="container">
@@ -22,6 +24,11 @@
         </article>
         <% end %>
     </div>
+  </div>
+  
+  <!--ページネーション-->
+  <div class="row justify-content-center mt-5">
+    <%= paginate @members %>
   </div>
   
 </section>
