--- a/app/views/layouts/_tag_list.html.erb
+++ b/app/views/layouts/_tag_list.html.erb
@@ -1,4 +1,4 @@
 <!--タグの値を取得-->
 <% tag_list.each do |tag| %>
-  <p class="badge badge-primary mr-1 p-2"><%= tag %></p>
+  <p class="badge badge-primary mr-1 p-2"><%= link_to tag, admins_informations_path(tag_name: tag), class: "text-white" %></p>
 <% end %>
