--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,6 +1,8 @@
-<section class="container col-md-5 mt-5">
+<section class="container col-md-5 p-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">スタッフ・選手詳細</h2>
+  <h3 class="row section-ttl justify-content-center mb-5">
+    <span>スタッフ・選手詳細</span>
+  </h3>
 
   <div class="bg-light">
     <div class="row justify-content-center">
@@ -9,7 +11,7 @@
         <%= attachment_image_tag @member, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
       </div>
       <!--メンバー詳細説明-->
-      <div class="col-md-6 col-sm-12 font-weight-bold pt-5">
+      <div class="col-md-6 col-sm-12 font-weight-bold">
         <label>氏名：</label>
         <%= @member.last_name + " " + @member.first_name %>
         <br>
