--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,4 +1,4 @@
-<section class="member-content container mt-5">
+<section class="container mt-5">
   <!--セクションタイトル-->
   <h3 class="row section-ttl justify-content-center mb-5">
     <span>選手・スタッフ一覧</span>
