--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,8 @@
 <section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
-  <h2 class="section-ttl row mb-3">スケジュール詳細</h2>
+  <h3 class="row section-ttl justify-content-center mb-5">
+    <span>スケジュール</span>
+  </h3>
 
   <!-- サクセスメッセージの表示 -->
   <p id="notice" class="text-danger">
@@ -11,21 +13,21 @@
     <table class="table mb-0">
       <thead>
         <tr>
-          <th class="col-4">項目</th>
-          <th class="col-8">内容</th>
+          <th class="col-3">項目</th>
+          <th class="col-9">内容</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-    			<td>スケジュールタイトル</td>
+    			<td>タイトル</td>
     			<td><%= @event.title %></td>
         </tr>
         <tr>
-    			<td>開始日時</td>
-    			<td><%= @event.start_time %></td>
+    			<td>開始</td>
+    			<td><%= @event.start_time.strftime("%Y-%m-%d %H:%M") %></td>
         </tr>
         <tr>
-    			<td>お問い合わせ内容</td>
+    			<td>内容</td>
     			<td><%= simple_format(@event.content) %></td>
         </tr>
       </tbody>
