--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,17 +1,17 @@
-<section class="container col-md-5 p-5">
+<section class="container p-5">
   <!--セクションタイトル-->
   <h3 class="row section-ttl justify-content-center mb-5">
     <span>スタッフ・選手詳細</span>
   </h3>
 
-  <div class="bg-light">
+  <div class="bg-light p-3">
     <div class="row justify-content-center">
       <!--メンバー画像-->
-      <div class="col-md-6 col-sm-12">
+      <div class="mr-4">
         <%= attachment_image_tag @member, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
       </div>
       <!--メンバー詳細説明-->
-      <div class="col-md-6 col-sm-12 font-weight-bold">
+      <div class="font-weight-bold ml-4">
         <label>氏名：</label>
         <%= @member.last_name + " " + @member.first_name %>
         <br>
@@ -37,7 +37,8 @@
         <%= @member.goal %>
       </div>
     </div>
+    <div class="row justify-content-end">
+      <%= link_to "戻る", members_path, class: "btn btn-outline-secondary" %>
+    </div>
   </div>
-
-  <%= link_to "戻る", members_path, class: "btn btn-outline-secondary m-3" %>
 </section>
