--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,6 +70,9 @@
                   <%= link_to "応援グッズ", items_path, class: 'nav-link' %>
                 </li>
                 <li class="nav-item">
+                  <%= link_to "カート", cart_items_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
                   <%= link_to "保護者専用", guardians_information_for_guardians_path, class: 'nav-link' %>
                 </li>
               <% end %>
