--- a/app/views/orders/thanks.html.erb
+++ b/app/views/orders/thanks.html.erb
@@ -1,8 +1,8 @@
-<section class="container mt-5">
+<section class="container mt-5 vh-100">
 
   <!--見出し-->
   <h3 class="row justify-content-center">
-    ご注文ありがとうございます！
+    <span>ご注文ありがとうございます！</span>
   </h3>
   <!--コメント-->
  <div class="row justify-content-center">
