--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -55,7 +55,7 @@
       </div>
       <!--支払方法-->
       <div class="row">
-        <div class="form-group">
+        <div class="form-group col-md-6">
           <%= f.label :payment_method, "支払方法", class: "form-label" %>
           <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
           <%= f.label :payment_method, Order.payment_methods_i18n[:cash] %>
@@ -65,7 +65,7 @@
       </div>
 
       <div class="row actions">
-        <%= f.submit '確認画面へ進む', class: "btn btn-success" %>
+        <%= f.submit '確認画面へ進む', class: "btn" %>
       </div>
     <% end %>
 
